# claude-code-sync

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  README.md  claude-code-sync.spec  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: ci.yml
claude_code_sync/: __init__.py  __main__.py  api.py  archive.py  backups.py  config.py  importer.py  manifest.py  scanner.py  server.py
claude_code_sync/webui/: app.js  index.html  style.css
claude_code_sync/webui/fonts/: LICENSE-fonts.md
docs/: architecture.md  build.md  cli.md  configuration.md  development.md  security.md  usage.md  what-is-collected.md
scripts/backup-export/: README.md  backup-export.bat  backup-export.sh
scripts/clean-backups/: README.md  clean-backups.bat  clean-backups.sh
scripts/status-repos/: README.md  status-repos.bat  status-repos.sh
scripts/update-repos/: README.md  update-repos.bat  update-repos.sh
tests/: conftest.py  test_api.py  test_backups.py  test_cli.py  test_config.py  test_roundtrip.py  test_scanner.py  test_security.py  test_selection.py  test_server.py
